<resources>
    <string name="app_name">Charp</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT ?</string>
    <string name="display_name">Display Name</string>
    <string name="phone">Email</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_status">Hi there, I\'m using Charp App</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="signed_out">Signed Out</string>
    <string name="signed_in">Signed In</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="sign_out">Sign Out</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="start_phone_auth">Start</string>
    <string name="send_user_name">Send</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_user_name">Enter your name</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="ok">Ok</string>
    <string name="confirm_number_title">אישור מספר</string>
    <string name="confirm_number_message">האם זהו המספר אליו יישלח ה-SMS?\n%s</string>
</resources>
