<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/main_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/grey_100"
              android:orientation="vertical"
              android:weightSum="1"
              tools:context="com.yso.charp.fragment.GetSMSFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/get_sms_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/phone_title_text"
            android:theme="@style/ThemeOverlay.MyTitleText"/>

        <TextView
            android:id="@+id/get_sms_status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out"/>

        <TextView
            android:id="@+id/get_sms_detail"
            style="@style/ThemeOverlay.MyTextDetail"
            tools:text="Firebase User ID: 123456789abc"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_300"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/get_sms_phone_auth_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">


            <EditText
                android:id="@+id/get_sms_field_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1.0"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"/>


            <Button
                android:id="@+id/get_sms_button_start_verification"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_selector"
                android:text="@string/start_phone_auth"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/get_sms_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center"
                android:text="טיימר לשליחה מחדש"/>

            <Button
                android:visibility="gone"
                android:id="@+id/get_sms_button_resend"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_selector"
                android:text="@string/resend_phone_auth"
                android:textColor="@android:color/white"/>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>